--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -18,13 +18,14 @@
     align-items: center;
     justify-content: space-around;
     border-bottom: 1px solid #BABBC5;
-    margin: -101px 0px;
+    margin: -100px 0px;
     position: fixed;
     background-color: #2C3154;
 }
 
 .header__point {
     color: white;
+    text-decoration: none;
 }
 
 .header__form {
@@ -41,6 +42,10 @@
 
 }
 
+.header__form h3 {
+    margin-top: 150px;
+}
+
 .header__lorem {
     width: 1170px;
 }
@@ -49,7 +54,8 @@
     display: flex;
     justify-content: center;
 }
-.header__button button:hover{
+
+.header__button button:hover {
     background-color: #E71414;
 }
 
@@ -63,6 +69,7 @@
 }
 
 .header__point:hover {
+    padding: 36px;
     border-bottom: 2px solid white;
 }
 
@@ -101,40 +108,204 @@
     margin-bottom: 100px;
     margin-top: 100px;
 }
-.WORK .bg{
- position: absolute;
- background: rgb(0,0,0,0.5);
- width: 100%;
- height: 100%;
+
+.WORK .bg {
+    position: absolute;
+    background: rgb(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
 }
 
 .work__img {
     width: 337px;
     height: 250px;
-    position:relative;
+    position: relative;
 }
-.blackout{
-    width:337px;
+
+.blackout {
+    width: 337px;
     height: 250px;
     color: white;
-    background: radial-gradient(rgb(255,67,67, 0.8), rgb(255,67,67, 0.8));
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
     opacity: 0;
-    position:absolute ;
+    position: absolute;
     font-family: Raleway;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
-.blackout h4{
+
+.blackout1 {
+    width: 333px;
+    height: 249px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 340px;
+}
+
+.blackout2 {
+    width: 337px;
+    height: 250px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 675px;
+}
+
+.blackout3 {
+    width: 335px;
+    height: 250px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 1014px;
+}
+
+.blackout4 {
+    width: 336px;
+    height: 247px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 252px;
+}
+
+.blackout5 {
+    width: 334px;
+    height: 247px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 252px;
+    margin-left: 339px;
+}
+
+.blackout6 {
+    width: 334px;
+    height: 247px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 677px;
+    margin-top: 252px;
+}
+
+.blackout7 {
+    width: 334px;
+    height: 247px;
+    color: white;
+    background: radial-gradient(rgb(255, 67, 67, 0.8), rgb(255, 67, 67, 0.8));
+    opacity: 0;
+    position: absolute;
+    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 252px;
+    margin-left: 1014px;
+}
+
+
+.blackout h4 {
     margin-bottom: -100px;
 }
-.work__img:hover{
-opacity: 1;
+.blackout1 h4 {
+    margin-bottom: -100px;
 }
-.blackout:hover{
-opacity: 1;
+.blackout2 h4 {
+    margin-bottom: -100px;
 }
+.blackout3 h4 {
+    margin-bottom: -100px;
+}
+.blackout4 h4 {
+    margin-bottom: -100px;
+}
+.blackout5 h4 {
+    margin-bottom: -100px;
+}
+.blackout6 h4 {
+    margin-bottom: -100px;
+}
+.blackout7 h4 {
+    margin-bottom: -100px;
+}
+
+.work__img:hover {
+    opacity: 1;
+}
+
+.blackout:hover {
+    opacity: 1;
+}
+
+.blackout1:hover {
+    opacity: 1;
+}
+
+.blackout2:hover {
+    opacity: 1;
+}
+
+.blackout3:hover {
+    opacity: 1;
+}
+
+.blackout4:hover {
+    opacity: 1;
+}
+
+.blackout5:hover {
+    opacity: 1;
+}
+
+.blackout6:hover {
+    opacity: 1;
+}
+
+.blackout7:hover {
+    opacity: 1;
+}
+
 .reviews {
     width: 1170px;
     display: flex;
@@ -155,7 +326,7 @@ opacity: 1;
     display: flex;
     align-items: center;
     background-color: #5C3249;
-    width: 1341px;
+    width: 100%;
     margin: 0 auto;
     height: 486px;
     margin-top: 100px;
@@ -194,8 +365,9 @@ opacity: 1;
     font-size: 20px;
     font-family: Raleway;
 }
-.DOWNLOAD button:hover{
-    background-color:#E71414;
+
+.DOWNLOAD button:hover {
+    background-color: #E71414;
 }
 
 .scroll {
@@ -205,46 +377,490 @@ opacity: 1;
     justify-content: space-between;
     margin: 10px auto;
 }
+
 .copyright {
     width: 100%;
     height: 250px;
     font-family: Raleway;
-    background-color:#353C65;
-    color:white;
+    background-color: #353C65;
+    color: white;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: nowrap;
     align-items: center;
 }
-.footer__item{
+
+.footer__item {
     width: 370px;
     height: 71px;
+
     h3 {
         text-align: center;
     }
-    img{
+
+    img {
         margin: 10px 10px;
     }
+
     p {
         text-align: center;
     }
 }
-.footer__img{
+
+.footer__img {
     text-align: center;
 }
-.footer{
+
+.footer {
     width: 100%;
     height: 100px;
-    background-color:#2C3154;
+    background-color: #2C3154;
     font-family: Raleway;
     margin-top: -16px;
-    color:white;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.footer__text{
+
+.footer__text {
     width: 370px;
     height: 50px;
 }
 
+header {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.menu-btn {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.menu-btn span {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    transition: all 0.5s;
+}
+
+.menu-btn span:nth-of-type(2) {
+    top: calc(50% - 5px);
+}
+
+.menu-btn span:nth-of-type(3) {
+    top: calc(50% + 5px);
+}
+
+.menu-btn.active span:nth-of-type(1) {
+    display: none;
+}
+
+.menu-btn.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(45deg);
+}
+
+.menu-btn.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(-45deg);
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    background: radial-gradient(rgba(18, 15, 235, 0.2), rgba(18, 15, 235, 0.2)), url("../images/img.png");
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+    font-family: Raleway;
+}
+
+.menu.active {
+    transform: translateX(0);
+}
+
+.menu li {
+    list-style-type: none;
+}
+
+@media (min-width:321px) {
+    .menu-btn {
+        display: none;
+    }
+}
+
+@media (max-width:1024px) {
+    .header__subtitle {
+        width: 100%;
+    }
+
+    .header__lorem {
+        width: 100%;
+    }
+
+    .header__form {
+        margin: 0 80px;
+        margin-top: 100px;
+    }
+
+    .quality {
+        flex-wrap: wrap;
+        width: 1000px;
+        margin: 0 auto;
+        font-family: Raleway;
+        display: flex;
+    }
+
+    .quality__point {
+        width: 333px;
+    }
+
+    .work__img {
+        width: 250px;
+    }
+
+    .blackout {
+        width: 253px;
+    }
+
+    .blackout1 {
+        width: 248px;
+        margin-left: 255px;
+    }
+
+    .blackout2 {
+        width: 249px;
+        margin-left: 504px;
+    }
+
+    .blackout3 {
+        width: 249px;
+        margin-left: 755px;
+        height: 249px;
+    }
+
+    .blackout4 {
+        width: 249px;
+        margin-left: 4px;
+    }
+
+    .blackout5 {
+        width: 249px;
+        margin-left: 255px;
+    }
+
+    .blackout6 {
+        width: 249px;
+        margin-left: 504px;
+    }
+
+    .blackout7 {
+        width: 249px;
+        margin-left: 755px;
+        height: 249px;
+    }
+
+    .reviews {
+        width: 1000px
+    }
+
+    .reviews__text {
+        width: 240px;
+        margin: 0 6px;
+    }
+
+    .img__text {
+        width: 240px;
+    }
+
+    .testimonials {
+        width: 100%;
+    }
+
+    .testimonials img {
+        width: 500px;
+        height: 486px;
+    }
+
+    .DOWNLOAD {
+        width: 100%;
+    }
+}
+
+@media (max-width:320px) {
+    .header__tabs {
+        justify-content: normal;
+    }
+
+    .header__subtitle {
+        font-size: 22px;
+    }
+
+    .header__point {
+        display: none;
+    }
+
+    .header__logo {}
+
+    .header__subtitle {
+        font-size: 31px;
+    }
+
+    .header__form {
+        margin: 100px 20px 0;
+    }
+
+    .header__form h3 {
+        margin-top: 0px;
+    }
+
+    .active img {
+        width: 195px;
+    }
+
+    .active a {
+        color: white;
+        text-decoration: none;
+    }
+
+    .menu {
+        color: white;
+    }
+
+    .active ul {
+        margin-left: -31px;
+    }
+
+    .active li {
+        margin: 30px auto;
+    }
+
+    .quality {
+        flex-direction: column;
+    }
+
+    .quality__point {
+        width: 300px;
+    }
+
+    .WORK {
+        grid-template-areas:
+            "item1 item2 "
+            "item5 item6 ";
+    }
+
+    .work__img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .blackout {
+        width: 151px;
+        height: 149px;
+    }
+
+    .blackout1 {
+        width: 149px;
+        height: 149px;
+        margin-left: 152px;
+    }
+
+    .blackout2 {
+        width: 149px;
+        height: 149px;
+        margin-top: 150px;
+        margin-left: 2px;
+    }
+
+    .blackout3 {
+        width: 149px;
+        height: 149px;
+        margin-top: 150px;
+        margin-left: 153px;
+    }
+
+    .blackout4 {
+        width: 149px;
+        height: 149px;
+        margin-top: 300px;
+        margin-left: 2px;
+    }
+
+    .blackout5 {
+        width: 149px;
+        height: 149px;
+        margin-top: 300px;
+        margin-left: 153px;
+    }
+
+    .blackout6 {
+        width: 149px;
+        height: 149px;
+        margin-top: 450px;
+        margin-left: 2px;
+    }
+
+    .blackout7 {
+        width: 149px;
+        height: 149px;
+        margin-top: 450px;
+        margin-left: 153px;
+    }
+
+    .blackout h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout1 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout1 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout2 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout2 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout3 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout3 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout4 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout4 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout5 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout5 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout6 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout6 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout7 h4 {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .blackout7 p {
+        width: 100px;
+        font-size: 10px;
+    }
+
+    .reviews {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .reviews__text {
+        margin: 0 auto;
+    }
+
+    .reviews__text img {
+        margin-bottom: 40px;
+    }
+
+    .description {
+        margin-bottom: 30px;
+    }
+
+    .testimonials {
+        flex-direction: column;
+    }
+
+    .testimonials__text h3 {
+        width: 240px;
+        margin: 10px auto;
+        font-size: 27px;
+    }
+
+    .testimonials img {
+        width: 303px;
+        height: 200px;
+    }
+
+    .DOWNLOAD h2 {
+        width: 200px;
+    }
+
+    .DOWNLOAD p {
+        width: 200px;
+    }
+
+    .DOWNLOAD button {
+        width: 250px;
+    }
+
+    .copyright {
+        flex-direction: column;
+        height: 500px;
+    }
+
+    .footer__item {
+        margin: 30px;
+    }
+
+    .footer__item p {
+        margin: 0 30px;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
+    .footer__text p {
+        margin: 0 60px;
+    }
+}
